<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/left_menu_linkedin"
            android:checked="true"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/leftmenu_padc_linked"/>

        <item
            android:id="@+id/left_menu_jobsearch"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/leftmenu_padc_job"/>

        <item
            android:id="@+id/left_menu_pulse"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/leftmenu_padc_pulse"/>

        <item
            android:id="@+id/left_menu_cinema"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/leftmenu_padc_cinema"/>

        <item
            android:id="@+id/left_menu_winzin"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/leftmenu_padc_winzin"/>

    </group>
</menu>